# techquiz

./: .dockerignore  .env.example  .gitignore  DEVELOPMENT.md  README.md  TROUBLESHOOTING.md  conftest.py  dev.sh  dev_reset.sh  docker-compose.yml  fix-difficulty-data.sh  index.html  package-lock.json  package.json  pytest.ini  requirements-test.txt  tailwind.config.js  techquiz-data-model.mermaid  test-category-integration.sh  test-difficulty-api.sh  test-frontend.sh  test-html-css-quiz.sh  test-integration.sh  test.sh  tsconfig.app.tsbuildinfo  vitest.config.ts
backend/: .coverage  .env.example  manage.py  pyproject.toml  test.sh  test_supabase_connection.py  test_supabase_model.py
backend/quiz/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/quiz/migrations/: 0001_initial.py  0002_difficultylevel_remove_question_quiz_and_more.py  0003_auto_20250414_1534.py  0004_auto_20250414_1535.py  0005_testsupabasemodel.py  0006_add_test_field.py  0007_remove_test_field.py  0008_question_alter_category_options_and_more.py
backend/quiz/models/: __init__.py  activity_history.py  answer.py  category.py  difficulty.py  question.py  quiz.py  quiz_result.py  test_model.py  user_statistics.py
backend/quiz/tests/: __init__.py  test_api_client_mock.py  test_integration.py  test_serializers.py  (+1 more)
backend/techskillsquiz/: __init__.py  apps.py  asgi.py  settings.py  supabase.py  supabase_mixins.py  supabase_sync.py  urls.py  wsgi.py
backend/users/: __init__.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/workflows/: docker-ci.yml
(+81 files in other folders)
