[tool.poetry]
name = "techskillsquiz-backend"
version = "0.1.0"
description = "Backend for TechSkillsQuiz application"
authors = ["Your Name <your.email@example.com>"]
packages = [
    { include = "techskillsquiz" },
    { include = "quiz" },
    { include = "users" }
]

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.0"
djangorestframework = "^3.14.0"
django-cors-headers = "^4.3.1"
django-filter = "^23.5"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.9"
supabase = "^2.4.0"
djangorestframework-simplejwt = "^5.3.0"
drf-yasg = "^1.21.7"
coreapi = "^2.3.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-django = "^4.8.0"
black = "^24.2.0"
isort = "^5.13.2"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3 